fix image overlap and some styling issues

--- a/src/Components/Button/Button.module.css
+++ b/src/Components/Button/Button.module.css
@@ -17,12 +17,11 @@
 
 .button a {
     margin: 0 auto;
-    font-size: 13px;
+    font-size: 15px;
 }
 
 .button:hover {
     cursor: pointer;
-    font-size: 20px;
 }
 
 
@@ -33,23 +32,16 @@
         align-items: center;
         height: 40px;
         width: 110px;
-        margin: 0 auto;
         border-radius: 10px;
         border: 2px solid var(--primary);
     }
 
 
     .button p {
-        margin: 0 auto;
         font-size: 16px;
     }
 
     .button a {
-        margin: 0 auto;
         font-size: 18px;
-    }
-
-    .button:hover {
-        cursor: pointer;
     }
 }
