--- a/src/Components/page/pageContent.module.css
+++ b/src/Components/page/pageContent.module.css
@@ -25,7 +25,7 @@
 
 .contentContainer {
     z-index: 3;
-    margin: 100px auto 50px;
+    margin: 70px auto 50px;
     max-width: 1150px;
     min-height: 70vh;
 }
